# messenger-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  buildspec.yml  diesel.toml  docker-compose.yml  rust-analyzer.json  rustfmt.toml  template.yaml
.github/workflows/: docker-publish.yml
migrations/2024-09-16-075806_users_table/: up.sql
migrations/2024-09-17-000000_message_request_table/: down.sql  up.sql
migrations/2024-09-17-023505_groups_table/: down.sql  up.sql
migrations/2024-09-18-024701_messages_table/: down.sql  up.sql
migrations/2024-09-19-115120_add_idempotency_key_to_messages_table/: down.sql  up.sql
migrations/2024-09-20-065541_user_push_subscriptions_table/: down.sql  up.sql
migrations/2024-09-25-131426_alter_users_table/: down.sql  up.sql
src/: authorization.rs  dtos.rs  lib.rs  main.rs  models.rs  schema.rs
src/controllers/: auth_controller.rs  debug_controller.rs  group_controller.rs  message_controller.rs  message_request_controller.rs  mod.rs  user_controller.rs  user_push_subscription_controller.rs
src/errors/: problem.rs
src/middleware/: authorization.rs
src/repositories/: group_repository.rs  message_repository.rs  message_request_repository.rs  mod.rs  user_push_subscription_repository.rs  user_repository.rs
src/services/: cognito_service.rs  google_cloud_storage_service.rs  mod.rs  s3_service.rs
