[package]
name = "messenger-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7"
actix-web = "4.9"
apistos = "0.3"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1.50"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "1.0", features = ["display", "error"] }
diesel = { version = "2.2", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = "2.2"
dotenvy = "0.15"
env_logger = "0.11"
futures-util = "0.3"
jsonwebtoken = "9.3"
lazy_static = "1.5"
log = "0.4"
num-bigint = "0.4"
reqwest = { version = "0.12", features = ["json"] }
rs-snowflake = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = { package = "apistos-schemars", version = "0.8", features = [
        "chrono",
] }
tokio = { version = "1.40", features = ["full"] }
