[package]
name = "messenger-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.7.6", features = ["tracing", "ws"] }
aws-config = { version = "1.5.6", features = ["behavior-version-latest"] }
aws-sdk-cognitoidentityprovider = "1.51.0"
aws-sdk-s3 = "1.51.0"
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] }
derive-new = "0.5.9"
diesel = { version = "2.2.4", features = ["chrono", "postgres", "r2d2"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
hyper = "1.4.1"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
reqwest = { version = "0.12.7", features = ["json"] }
rspc = { version = "0.2.0", features = ["tracing"] }
rspc-axum = { version = "0.1.1", features = ["ws"] }
rs-snowflake = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
specta = { version = "1.0.5", features = ["chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
tower = "0.5.1"
tower-http = { version = "0.6.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
web-push = { version = "0.9.5", features = ["hyper-client"] }
url = "2.5.2"
